// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c6 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c6 *[fill^='#'] {
  fill: #8A96A8;
}

.c6.c6[data-disabled] {
  pointer-events: none;
}

.c6:not([data-disabled]):hover {
  cursor: pointer;
}

.c6:not([data-disabled]):hover *[fill^='#'] {
  fill: #0A54C2;
}

.c3 {
  position: relative;
  padding: 0 16px;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 16px;
  line-height: 24px;
  font-family: 'VTB Group UI',sans-serif;
  box-sizing: border-box;
  border-radius: 4px;
  height: 100%;
}

[data-status='error'] .c2 {
  border-color: #DA0B20;
}

[data-read-only] .c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #E2E5E9;
  border-color: #E2E5E9;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 10px;
}

.c5 > * {
  display: block;
  width: 24px;
  height: 24px;
}

.c5 > *:not(:first-child) {
  margin-left: 8px;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: #FFFFFF;
  position: relative;
  border-radius: 4px;
  height: 40px;
  border-color: #8A96A8;
  border-width: 1px;
  border-style: solid;
}

.c1.c1[disabled],
.c1.c1[data-read-only] {
  cursor: default;
}

[data-focus-within] .c0,
.c1:focus {
  border-color: #083F91;
}

.c1:hover {
  border-color: #0A54C2;
}

.c1:focus {
  outline: none;
}

.c1:active {
  outline: none;
}

.c1[data-status='error'] {
  border-color: #DA0B20;
}

.c1[data-status='success'] {
  border-color: #05A13A;
}

.c4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<body>
    <div>
      <div
        class="c0 c1"
        role="button"
        tabindex="0"
      >
        <div
          class="c2 c3"
        >
          <div
            class="c4"
          >
            Селект
          </div>
          <div
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .c6 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c6 *[fill^='#'] {
  fill: #8A96A8;
}

.c6.c6[data-disabled] {
  pointer-events: none;
}

.c6:not([data-disabled]):hover {
  cursor: pointer;
}

.c6:not([data-disabled]):hover *[fill^='#'] {
  fill: #0A54C2;
}

.c3 {
  position: relative;
  padding: 0 16px;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 16px;
  line-height: 24px;
  font-family: 'VTB Group UI',sans-serif;
  box-sizing: border-box;
  border-radius: 4px;
  height: 100%;
}

[data-status='error'] .c2 {
  border-color: #DA0B20;
}

[data-read-only] .c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #E2E5E9;
  border-color: #E2E5E9;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 10px;
}

.c5 > * {
  display: block;
  width: 24px;
  height: 24px;
}

.c5 > *:not(:first-child) {
  margin-left: 8px;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: #FFFFFF;
  position: relative;
  border-radius: 4px;
  height: 40px;
  border-color: #8A96A8;
  border-width: 1px;
  border-style: solid;
}

.c1.c1[disabled],
.c1.c1[data-read-only] {
  cursor: default;
}

[data-focus-within] .c0,
.c1:focus {
  border-color: #083F91;
}

.c1:hover {
  border-color: #0A54C2;
}

.c1:focus {
  outline: none;
}

.c1:active {
  outline: none;
}

.c1[data-status='error'] {
  border-color: #DA0B20;
}

.c1[data-status='success'] {
  border-color: #05A13A;
}

.c4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div>
    <div
      class="c0 c1"
      role="button"
      tabindex="0"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          Селект
        </div>
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select should render small components 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c6 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c6 *[fill^='#'] {
  fill: #8A96A8;
}

.c6.c6[data-disabled] {
  pointer-events: none;
}

.c6:not([data-disabled]):hover {
  cursor: pointer;
}

.c6:not([data-disabled]):hover *[fill^='#'] {
  fill: #0A54C2;
}

.c3 {
  position: relative;
  padding: 0 12px;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 14px;
  line-height: 20px;
  font-family: 'VTB Group UI',sans-serif;
  box-sizing: border-box;
  border-radius: 4px;
  height: 100%;
}

[data-status='error'] .c2 {
  border-color: #DA0B20;
}

[data-read-only] .c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #E2E5E9;
  border-color: #E2E5E9;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 10px;
}

.c5 > * {
  display: block;
  width: 20px;
  height: 20px;
}

.c5 > *:not(:first-child) {
  margin-left: 8px;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: #FFFFFF;
  position: relative;
  border-radius: 4px;
  height: 32px;
  border-color: #8A96A8;
  border-width: 1px;
  border-style: solid;
}

.c1.c1[disabled],
.c1.c1[data-read-only] {
  cursor: default;
}

[data-focus-within] .c0,
.c1:focus {
  border-color: #083F91;
}

.c1:hover {
  border-color: #0A54C2;
}

.c1:focus {
  outline: none;
}

.c1:active {
  outline: none;
}

.c1[data-status='error'] {
  border-color: #DA0B20;
}

.c1[data-status='success'] {
  border-color: #05A13A;
}

.c4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<body>
    <div>
      <div
        class="c0 c1"
        role="button"
        tabindex="0"
      >
        <div
          class="c2 c3"
        >
          <div
            class="c4"
          >
            Селект
          </div>
          <div
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .c6 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c6 *[fill^='#'] {
  fill: #8A96A8;
}

.c6.c6[data-disabled] {
  pointer-events: none;
}

.c6:not([data-disabled]):hover {
  cursor: pointer;
}

.c6:not([data-disabled]):hover *[fill^='#'] {
  fill: #0A54C2;
}

.c3 {
  position: relative;
  padding: 0 12px;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 14px;
  line-height: 20px;
  font-family: 'VTB Group UI',sans-serif;
  box-sizing: border-box;
  border-radius: 4px;
  height: 100%;
}

[data-status='error'] .c2 {
  border-color: #DA0B20;
}

[data-read-only] .c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #E2E5E9;
  border-color: #E2E5E9;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 10px;
}

.c5 > * {
  display: block;
  width: 20px;
  height: 20px;
}

.c5 > *:not(:first-child) {
  margin-left: 8px;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: #FFFFFF;
  position: relative;
  border-radius: 4px;
  height: 32px;
  border-color: #8A96A8;
  border-width: 1px;
  border-style: solid;
}

.c1.c1[disabled],
.c1.c1[data-read-only] {
  cursor: default;
}

[data-focus-within] .c0,
.c1:focus {
  border-color: #083F91;
}

.c1:hover {
  border-color: #0A54C2;
}

.c1:focus {
  outline: none;
}

.c1:active {
  outline: none;
}

.c1[data-status='error'] {
  border-color: #DA0B20;
}

.c1[data-status='success'] {
  border-color: #05A13A;
}

.c4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div>
    <div
      class="c0 c1"
      role="button"
      tabindex="0"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          Селект
        </div>
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
